--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   syncfusion_flutter_calendar: ^23.2.7
   intl: ^0.18.0
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
