--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   syncfusion_flutter_calendar: ^23.2.7
   intl: ^0.18.0
   provider: ^6.1.1
+  interval_time_picker: ^2.0.0+5
 
 dev_dependencies:
   flutter_test:
