--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   path_provider: ^2.1.1
   path: ^1.8.3
   duration_picker: ^1.1.1
-  font_awesome_flutter: ^10.6.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
