--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   path: ^1.8.3
   duration_picker: ^1.1.1
   shared_preferences: ^2.2.2
+  popover: ^0.2.9
+  state_notifier: ^1.0.0
 
 dev_dependencies:
   flutter_test:
