--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  syncfusion_flutter_calendar: ^23.2.5
+  syncfusion_flutter_calendar: ^24.1.45
+  syncfusion_flutter_core: ^24.1.45
   intl: ^0.18.0
   provider: ^6.1.1
   interval_time_picker: ^2.0.0+5
