--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   shared_preferences: ^2.2.2
   popover: ^0.2.9
   state_notifier: ^1.0.0
+  page_view_dot_indicator: ^2.3.0
 
 dev_dependencies:
   flutter_test:
