--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   popover: ^0.2.9
   state_notifier: ^1.0.0
   page_view_dot_indicator: ^2.3.0
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
