--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   page_view_dot_indicator: ^2.3.0
   flutter_svg: ^2.0.9
   flutter_inset_box_shadow: ^1.0.8
+  google_mobile_ads: ^4.0.0
 
 dev_dependencies:
   flutter_test:
