--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,14 +11,14 @@ if (flutterRoot == null) {
     throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
 }
 
-def flutterVersionCode = 6
+def flutterVersionCode = 7
 if (flutterVersionCode == null) {
-    flutterVersionCode = '6'
+    flutterVersionCode = '7'
 }
 
-def flutterVersionName = '1.2.0'
+def flutterVersionName = '1.3.0'
 if (flutterVersionName == null) {
-    flutterVersionName = '1.2.0'
+    flutterVersionName = '1.3.0'
 }
 
 
@@ -72,6 +72,9 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.release
+            ndk {
+                debugSymbolLevel 'FULL'
+            }
         }
     }
 
